<resources>
    <string name="app_name">UplusApi</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="cpwd_text">Confirm Password</string>
    <string name="pwd_text">Password</string>
    <string name="register_text">Register User</string>
    <string name="register_btn">Register</string>
    <string name="login_text">Login User</string>
    <string name="login_btn">Login</string>
</resources>
